portal install guide update